[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Items-Enviroment/Chonk.png" type="Texture" id=1]
[ext_resource path="res://Assets/Audio/Music/containment.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/SFX/step1.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Scripts/Chonk.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/Items-Enviroment/Chonk Shadow.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.75, 5.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[node name="Chonk" type="StaticBody2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
music = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
visible = false
position = Vector2( 0.5, 0.5 )
z_index = -6
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="ContainmentSteamer" type="AudioStreamPlayer2D" parent="."]
volume_db = -8.0
max_distance = 413.0
attenuation = 5.65686
bus = "Radio"

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 963.0
attenuation = 6.9644
bus = "SoundFX"

[node name="Timer" type="Timer" parent="SFX"]
wait_time = 0.25
one_shot = true

[node name="Chonk" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chonk"]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[connection signal="timeout" from="SFX/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Chonk" to="." method="_on_Chonk_body_entered"]
[connection signal="body_exited" from="Chonk" to="." method="_on_Chonk_body_exited"]
